tooling/nargo_cli/tests/snapshots/execution_success/dual_constrained_lambdas/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []"
  ],
  "debug_symbols": "jZDRCoMwDEX/pc99GN3K1F8ZQ2qNUihtia0wxH9fFLu5gWNP6c3tuQmZWAtN6mvjOj+w6jaxBo21pq+t1yoa76g7zZxlWUcEoBbb+UQFheAiq1yylrNR2bR+GoJya40KyT1xBq6lSoGdsbC8Zv6mT8eoLMUGy1K+cPk3X4jrxheX8xEvfswXeXkpPvk7KaUNfl9sVGhUY2GTXXJ658ZHyE6+eECvoU0IS9LqUfYT",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
