tooling/nargo_cli/tests/snapshots/execution_success/dual_constrained_lambdas/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : []"
  ],
  "debug_symbols": "jZDRCoMwDEX/pc992Dod6q+MIbVGKZS2xFYY4r8vit3cwLGn5Obm3EAm1kIT+1rbzg2suk2sQW2M7mvjlAzaWZpOM2dJ1gEBaMR2PlFeItjAKhuN4WyUJq5Lg5d2rUEiuSfOwLZUKbDTBpZu5m/6dIzm5WWD8/L6wvO/+UIUG19k2REvftwX53RffPJ3UlJp/P7YKFHLxsAmu2jVzg0Pn5z0cY9OQRsRlqTVo+wn",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
